Updating the register at 260102_080944

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1057,8 +1057,14 @@
   "J. Pley.": "Jakob Pley",
   "J. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
+    "III A,1": "Johannes Schmidt (Philologe)",
+    "XIII,1": "Johannes Schmidt (Philologe)",
+    "XIII,2": "Johannes Schmidt (Philologe)",
+    "XIV,1": "Johannes Schmidt (Philologe)",
+    "XV,1": "Johannes Schmidt (Philologe)",
     "XV,2": "Johannes Schmidt (Philologe)",
-    "XVI,1": "Johannes Schmidt (Philologe)"
+    "XVI,1": "Johannes Schmidt (Philologe)",
+    "XVII,1": "Johannes Schmidt (Philologe)"
   },
   "J. Sieveking.": "Johannes Sieveking",
   "J. Sturm.": "Josef Sturm",
@@ -1092,10 +1098,13 @@
   "Joh. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "III A,1": "Johannes Schmidt (Philologe)",
+    "XIII,1": "Johannes Schmidt (Philologe)",
     "XIII,2": "Johannes Schmidt (Philologe)",
     "XIV,1": "Johannes Schmidt (Philologe)",
+    "XV,1": "Johannes Schmidt (Philologe)",
     "XV,2": "Johannes Schmidt (Philologe)",
-    "XVI,1": "Johannes Schmidt (Philologe)"
+    "XVI,1": "Johannes Schmidt (Philologe)",
+    "XVII,1": "Johannes Schmidt (Philologe)"
   },
   "Johann Kirchner.": "Johannes Kirchner",
   "Johanna Schmidt.": "Johanna Schmidt",
