Updating the register at 260103_081645

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1539,6 +1539,10 @@
   "Morel": "Willy Morel",
   "Moritz, L[udwig] A[lfred]": "Ludwig Alfred Moritz",
   "Moritz, [Bernhard]": "Bernhard Moritz",
+  "Moritz-Honigmann.": [
+    "Bernhard Moritz",
+    "Ernst Honigmann"
+  ],
   "Moritz.": "Bernhard Moritz",
   "Much": "Rudolf Much",
   "Much.": "Rudolf Much",
@@ -1950,6 +1954,10 @@
   "Schenkl": "Heinrich Schenkl",
   "Schenkl.": "Heinrich Schenkl",
   "Scherling": "Karl Scherling",
+  "Scherling-Wickert.": [
+    "Karl Scherling",
+    "Lothar Wickert"
+  ],
   "Scherling.": "Karl Scherling",
   "Schiff.": "Alfred Schiff",
   "Schissel": "Otmar Schissel von Fleschenberg",
