Updating the register at 260104_080938

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1319,6 +1319,7 @@
   "Kunnert.": "Heinrich Kunnert",
   "Kunst": "Karl Kunst",
   "Kunst †.": "Karl Kunst",
+  "Kunst.": "Karl Kunst",
   "Kunst. †": "Karl Kunst",
   "Kunst. ✝": "Karl Kunst",
   "Kurfess": "Alfons Kurfess",
@@ -1813,6 +1814,10 @@
   "R. Hanslik.": "Rudolf Hanslik",
   "R. Hartmann.": "Richard Hartmann",
   "R. Helm.": "Rudolf Helm",
+  "R. Leonhard-E. Weiss.": [
+    "Rudolf Leonhard",
+    "Egon Weiss"
+  ],
   "R. Leonhard.": "Rudolf Leonhard| (Jurist)",
   "R. Lullies.": "Reinhard Lullies",
   "R. Oehler.": "Raimund Oehler",
