Updating the register at 260106_081204

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -361,6 +361,7 @@
   "Danneberg.": "Robert Danneberg",
   "Danoff": "Christo Miloschev Danoff",
   "De Stefani.": "Eduardo Luigi De Stefani",
+  "Deeters.": "Gerhard Deeters",
   "Degering": "Hermann Degering",
   "Degering.": "Hermann Degering",
   "Deichgräber": "Karl Deichgräber",
@@ -1694,6 +1695,7 @@
   "P. J. Junge.": "Peter Julius Junge",
   "P. J. Meier.": "Paul Jonas Meier",
   "P. Kübler.": "Paul Kübler",
+  "P. Lambrechts.": "Pieter Lambrechts",
   "P. Maas.": "Paul Maas",
   "P. N. Ure.": "Percy Neville Ure",
   "P. Riewald.": "Paul Riewald",
@@ -2472,6 +2474,9 @@
   "Zwicker": "Johannes Zwicker",
   "Zwicker.": "Johannes Zwicker",
   "de Stefani.": "Eduardo Luigi De Stefani",
+  "gr. Kruse-Joh. Schmidt.": [
+    "Bernhard große Kruse"
+  ],
   "gr. Kruse.": "Bernhard große Kruse",
   "v. Arnim.": "Hans von Arnim",
   "v. Bissing.": "Friedrich Wilhelm von Bissing",
