Updating the register at 260107_081113

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2284,6 +2284,7 @@
   "W. Kubitschek.": "Wilhelm Kubitschek",
   "W. L. Westermann.": "William Linn Westermann",
   "W. Morel.": "Willy Morel",
+  "W. Müller.": "Werner Müller",
   "W. Nestle.": "Wilhelm Nestle",
   "W. Peek.": "Werner Peek",
   "W. Riemschneider.": "Wilhelm Riemschneider",
