Updating the register at 260107_185112

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -6,6 +6,7 @@
   "A. E. R. Boak.": "Arthur Edward Romilly Boak",
   "A. G. Drachmann.": "Aage Gerhardt Drachmann",
   "A. Gudeman.": "Alfred Gudeman",
+  "A. Hartmann.": "Albert Hartmann",
   "A. Herrmann.": "Albert Herrmann",
   "A. Hug.": "August Hug",
   "A. Jacoby.": "Adolf Jacoby",
