Updating the register at 260109_092913

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1386,6 +1386,7 @@
   "Lengle": "Joseph Lengle",
   "Lengle.": "Joseph Lengle",
   "Lenk": "Brunhilde Lenk",
+  "Lenk.": "Brunhilde Lenk",
   "Lenschau": "Thomas Lenschau",
   "Lenschau-Nachod.": [
     "Thomas Lenschau",
