Updating the register at 260118_081038

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -460,6 +460,7 @@
   "E. v. Borries.": "Emil von Borries",
   "Eames": "John Eames",
   "Ebeling": "Erich Ebeling",
+  "Ebeling.": "Erich Ebeling",
   "Ebert": "Friedrich Ebert",
   "Ebert.": "Friedrich Ebert| (Historiker)",
   "Eck": "Werner Eck",
@@ -1318,6 +1319,7 @@
   "Kuhnert.": "Ernst Kuhnert",
   "Kunkel, O[tto]": "Otto Kunkel",
   "Kunkel, Wolfgang": "Wolfgang Kunkel",
+  "Kunkel.": "Otto Kunkel",
   "Kunnert.": "Heinrich Kunnert",
   "Kunst": "Karl Kunst",
   "Kunst †.": "Karl Kunst",
