--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2448,6 +2448,7 @@
   "Wrede.": "Walter Wrede",
   "Wuilleumier": "Pierre Wuilleumier",
   "Wymer": "Joseph E. Wymer",
+  "Wymer.": "Joseph E. Wymer",
   "Wünsch, [Richard]": "Richard Wünsch",
   "Wünsch.": {
     "*": "Richard Wünsch",
