Updating the register at 260121_081136

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -810,6 +810,7 @@
   "Göhler": "Josef Göhler",
   "Göschka.": "Stephanie Göschka",
   "Güngerich": "Rudolf Güngerich",
+  "H. A. Wackernagel.": "Hans Georg Wackernagel",
   "H. Berve.": "Helmut Berve",
   "H. Besig.": "Hans Besig",
   "H. Chantraine.": "Heinrich Chantraine",
@@ -2012,6 +2013,7 @@
   "Schultz, H[ermann]": "Hermann Schultz",
   "Schultz.": "Hermann Schultz| (Philologe)",
   "Schuppe": "Ernst Schuppe",
+  "Schuppe.": "Ernst Schuppe",
   "Schur": "Werner Schur",
   "Schur.": "Werner Schur",
   "Schuster": "Mauriz Schuster",
@@ -2286,6 +2288,7 @@
   "W. Kroll.": "Wilhelm Kroll",
   "W. Kubitschek †.": "Wilhelm Kubitschek",
   "W. Kubitschek.": "Wilhelm Kubitschek",
+  "W. Kunkel.": "Wolfgang Kunkel",
   "W. L. Westermann.": "William Linn Westermann",
   "W. Morel.": "Willy Morel",
   "W. Müller.": "Werner Müller",
