Updating the register at 260123_081112

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1283,6 +1283,7 @@
   "Kraemer": "Hermann Kraemer",
   "Kraft": "Konrad Kraft",
   "Krahe": "Hans Krahe",
+  "Krahe.": "Hans Krahe",
   "Kranz": "Walther Kranz",
   "Kraus": "Walther Kraus",
   "Krause, [Karl]": "Karl Krause",
@@ -1296,6 +1297,9 @@
   "Krischan.": "Josef Krischan",
   "Krister Hanell.": "Krister Hanell",
   "Kroll": "Wilhelm Kroll",
+  "Kroll, mit Zusätzen von Krahe.": [
+    "Wilhelm Kroll"
+  ],
   "Kroll-Tambornino.": [
     "Wilhelm Kroll",
     "Julius Tambornino"
