Updating the register at 260124_081147

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1298,7 +1298,8 @@
   "Krister Hanell.": "Krister Hanell",
   "Kroll": "Wilhelm Kroll",
   "Kroll, mit Zusätzen von Krahe.": [
-    "Wilhelm Kroll"
+    "Wilhelm Kroll",
+    "Hans Krahe"
   ],
   "Kroll-Tambornino.": [
     "Wilhelm Kroll",
