Updating the register at 260125_081248

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1341,6 +1341,7 @@
   "Kähler": "Heinz Kähler",
   "Kähsbauer": "Paul Kähsbauer",
   "König": "Friedrich Wilhelm König",
+  "König.": "Friedrich Wilhelm König",
   "Körte": {
     "*": "Alfred Körte",
     "VI,1": "Gustav Körte"
