Updating the register at 260203_082306

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -848,6 +848,7 @@
   "Habel": "Paul Habel",
   "Habel.": "Paul Habel",
   "Habermehl": "Helmut Habermehl",
+  "Habermehl.": "Helmut Habermehl",
   "Habicht": "Christian Habicht",
   "Haebler.": "Albin Haebler",
   "Haedicke": "Walter Haedicke",
