Updating the register at 260206_081057

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1,6 +1,7 @@
 {
   "?": "?",
   "A. Arthur Schiller.": "A. Arthur Schiller",
+  "A. Berger.": "Adolf Berger",
   "A. Burckhardt.": "August Burckhardt-Brandenberg",
   "A. E. Gordon.": "Arthur Ernest Gordon",
   "A. E. R. Boak.": "Arthur Edward Romilly Boak",
@@ -70,6 +71,7 @@
   "Alföldy": "Géza Alföldy",
   "Alpers": "Klaus Alpers",
   "Altheim": "Franz Altheim",
+  "Altheim.": "Franz Altheim",
   "Alvaro d’Ors.": "Álvaro d’Ors",
   "Aly": "Wolfgang Aly",
   "Aly.": "Wolfgang Aly",
@@ -84,6 +86,7 @@
   "Andrée.": "Judith Andrée-Hanslik",
   "Andrée[-Hanslik]": "Judith Andrée-Hanslik",
   "Anger": "Irma s. Lorentz Anger",
+  "Anger.": "Irma von Lorentz",
   "Anneliese Modrze.": "Annelise Modrze",
   "Annelise Modrze.": "Annelise Modrze",
   "Arbesmann": "Rudolph Arbesmann",
@@ -816,6 +819,7 @@
   "H. Chantraine.": "Heinrich Chantraine",
   "H. Chochole.": "Herbert Chochole",
   "H. Diller.": "Hans Diller",
+  "H. Drerup.": "Heinrich Drerup",
   "H. Drexler.": "Hans Drexler",
   "H. Dörrie.": "Heinrich Dörrie",
   "H. E. Bauer.": "H. E. Bauer",
@@ -1097,6 +1101,7 @@
   "Jessen": "Otto Jessen",
   "Jessen.": "Otto Jessen",
   "Jirku": "Anton Jirku",
+  "Jirku.": "Anton Jirku",
   "Joh. Schmidt †.": [
     "Johannes Schmidt (Epigraphiker)"
   ],
@@ -1495,6 +1500,9 @@
   "Mau, [August]": "August Mau",
   "Mau.": "August Mau",
   "Maull": "Otto Maull",
+  "Maull; die Zusätze in Klammern von Pieske.": [
+    "Erich Pieske"
+  ],
   "Maur. Schuster.": "Mauriz Schuster",
   "Mauriz Schuster.": "Mauriz Schuster",
   "Maux": "Richard Maux",
@@ -1689,6 +1697,7 @@
   "Ostrogorsky": "Georg Ostrogorsky",
   "Otto Hoffmann.": "Otto Hoffmann",
   "Otto Luschnat.": "Otto Luschnat",
+  "Otto Maull.": "Otto Maull",
   "Otto Schultheß.": "Otto Schulthess",
   "Otto Seel.": "Otto Seel",
   "Otto Stein.": "Otto Stein",
@@ -2098,6 +2107,7 @@
   "Sonnet": "Paul Sonnet",
   "Sonnet.": "Paul Sonnet",
   "Sontheimer": "Walther Sontheimer",
+  "Sontheimer.": "Walther Sontheimer",
   "Speidel": "Michael Speidel",
   "Spuler": "Bertold Spuler",
   "St. Borzsák.": "István Borzsák",
