Updating the register at 260207_081037

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1501,6 +1501,7 @@
   "Mau.": "August Mau",
   "Maull": "Otto Maull",
   "Maull; die Zusätze in Klammern von Pieske.": [
+    "Otto Maull",
     "Erich Pieske"
   ],
   "Maur. Schuster.": "Mauriz Schuster",
