Updating the register at 260208_081126

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -544,7 +544,7 @@
     "Hans Georg Gundel"
   ],
   "F. Münzer.": "Friedrich Münzer",
-  "F. Poland.": "Franz Poland",
+  "F. Poland.": "Franz Poland| (Philologe)",
   "F. Schachermeyr.": "Fritz Schachermeyr",
   "F. Schober.": "Friedrich Schober",
   "F. Solmsen.": "Friedrich Solmsen",
@@ -1807,7 +1807,7 @@
   "Pohlenz": "Max Pohlenz",
   "Pohlenz.": "Max Pohlenz",
   "Poland": "Franz Poland",
-  "Poland.": "Franz Poland",
+  "Poland.": "Franz Poland| (Philologe)",
   "Polaschek": "Erich Polaschek",
   "Pollack": "Erwin Pollack",
   "Pollack.": "Erwin Pollack",
